--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -38,7 +38,7 @@ ja:
         new_password: "新しいパスワード"
       new:
         forgot_your_password: "パスワードを忘れましたか?"
-        send_me_reset_password_instructions: "パスワードの再設定方法を送信する"
+        send_me_reset_password_instructions: "パスワードを再発行する"
     registrations:
       edit:
         are_you_sure: "本当に良いですか?"
@@ -51,6 +51,7 @@ ja:
         we_need_your_current_password_to_confirm_your_changes: "変更を反映するには現在のパスワードを入力してください"
       new:
         sign_up: "アカウント登録"
+        length: "文字以上入力してください。"
     sessions:
       new:
         sign_in: "ログイン"
